e2e test for sse

--- a/examples/openai/index.html
+++ b/examples/openai/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+<pre><code id="output"></code></pre>
 <script type="module" src="dist/index.js"></script>
 </body>
 </html>
