--- a/examples/basic/public/index.html
+++ b/examples/basic/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<p>Edit me!</p>
+<p>Edit me! - a full HTML</p>
 <script type="module" src="script.js"></script>
 </body>
 </html>
