--- a/bslive.html
+++ b/bslive.html
@@ -4,8 +4,9 @@
     }
 
     abc-element {
-        color: red;
+        color: green;
     }
+
 </style>
 
 <abc-element></abc-element>
@@ -13,9 +14,10 @@
 <script type="module">
     class BSlive extends HTMLElement {
         connectedCallback() {
-            this.innerHTML = "Hello world";
+            this.innerHTML = "Hello worlds";
         }
     }
 
     customElements.define("abc-element", BSlive);
+
 </script>
