--- a/examples/html/playground.html
+++ b/examples/html/playground.html
@@ -13,7 +13,7 @@
 <script type="module">
     class BSlive extends HTMLElement {
         connectedCallback() {
-            this.innerHTML = "Hello world";
+            this.innerHTML = "Hello World!";
         }
     }
 
