support serve dir in HTML playground

--- a/examples/html/playground.html
+++ b/examples/html/playground.html
@@ -1,3 +1,5 @@
+<meta name="bslive serve-dir" content="--path=/ --dir=examples/basic/public" />
+
 <style>
     p {
         color: red;
@@ -9,6 +11,8 @@
 </style>
 
 <abc-element></abc-element>
+
+<img src="bg-01.jpg" alt="" style="width: 100px; height: 100px">
 
 <script type="module">
     class BSlive extends HTMLElement {
