--- a/examples/watcher/index.html
+++ b/examples/watcher/index.html
@@ -6,15 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-<main></main>
-<script type=module>
-    import { h, render } from "./node_modules/preact/dist/preact.mjs";
-
-    function App() {
-        return h("div", {}, h("ul", {}, h("li", {}, "a"), h("li", {}, "b")));
-    }
-    
-    render(App(), document.querySelector("main"));
-</script>
+<main>
+    <div>
+        <ul>
+            <li>a</li>
+            <li>b</li>
+        </ul>
+    </div>
+</main>
 </body>
 </html>
