--- a/examples/html/playground.html
+++ b/examples/html/playground.html
@@ -1,5 +1,3 @@
-<meta name="bslive serve-dir" content="--path=/ --dir=examples/basic/public" />
-
 <style>
     p {
         color: red;
@@ -17,7 +15,7 @@
 <script type="module">
     class BSlive extends HTMLElement {
         connectedCallback() {
-            this.innerHTML = "Hello World!";
+            this.innerHTML = "Hello World - 2";
         }
     }
 
