--- a/examples/html/playground.html
+++ b/examples/html/playground.html
@@ -15,7 +15,7 @@
 <script type="module">
     class BSlive extends HTMLElement {
         connectedCallback() {
-            this.innerHTML = "Hello World - 2";
+            this.innerHTML = "Hello World";
         }
     }
 
